# RenderSim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  __init__.py  build_cpp.sh  pyproject.toml  render_sim
CLI/: __init__.py  main.py
CLI/commands/: __init__.py  analyze_cmd.py  map_cmd.py  report_cmd.py  schedule_cmd.py
Hardware/: README.md  specification.md
Hardware/A1_cmod/Blending/: CMakeLists.txt
Hardware/A1_cmod/Blending/BSU/: BSU.h  CMakeLists.txt  testbench.cpp
Hardware/A1_cmod/Blending/DecompBinning/: CMakeLists.txt  DecompBinning.h  testbench.cpp
Hardware/A1_cmod/Blending/FeatureCompute/: CMakeLists.txt  FeatureCompute.h  testbench.cpp
Hardware/A1_cmod/Blending/GradientCompute/: CMakeLists.txt  GradientCompute.h  testbench.cpp
Hardware/A1_cmod/Blending/GradientPruning/: CMakeLists.txt  GradientPruning.h  testbench.cpp
Hardware/A1_cmod/Blending/IE/: CMakeLists.txt  IE.h  testbench.cpp
Hardware/A1_cmod/Blending/QSU/: CMakeLists.txt  QSU.h  testbench.cpp
Hardware/A1_cmod/Blending/Rearrangement/: CMakeLists.txt  Rearrangement.h  testbench.cpp
Hardware/A1_cmod/Blending/RowGeneration/: CMakeLists.txt  RowGeneration.h  testbench.cpp
Hardware/A1_cmod/Blending/RowProcessing/: CMakeLists.txt  RowProcessing.h  testbench.cpp
Hardware/A1_cmod/Blending/Sorting/: CMakeLists.txt  Sorting.h  testbench.cpp
Hardware/A1_cmod/Blending/TileMerging/: CMakeLists.txt  TileMerging.h  testbench.cpp
Hardware/A1_cmod/Blending/UNIIE/: CMakeLists.txt  UNIIE.h  testbench.cpp
Hardware/A1_cmod/Blending/VRU_v1/: CMakeLists.txt  VRU_v1.h  testbench.cpp
Hardware/A1_cmod/Blending/VRU_v3/: CMakeLists.txt  VRU_v3.h  testbench.cpp
Hardware/A1_cmod/Encode/: CMakeLists.txt
Hardware/A1_cmod/Encode/AG/: AG.h  CMakeLists.txt  testbench.cpp
Hardware/A1_cmod/Encode/CU/: CMakeLists.txt  CU.h
Hardware/A1_cmod/Encode/DCU/: CMakeLists.txt  DCU.h  testbench.cpp
Hardware/A1_cmod/Encode/ICU/: CMakeLists.txt  ICU.h  testbench.cpp
Hardware/A1_cmod/Encode/IGU/: CMakeLists.txt  IGU.h  testbench.cpp
Hardware/A1_cmod/Encode/PEU/: CMakeLists.txt  PEU.h  testbench.cpp
Hardware/A1_cmod/Encode/SPE/: CMakeLists.txt  SPE.h  testbench.cpp
Hardware/A1_cmod/Encode/reducer/: CMakeLists.txt  reducer.h  testbench.cpp
Hardware/A1_cmod/FieldComp/: CMakeLists.txt
Hardware/A1_cmod/FieldComp/MLP_block/: CMakeLists.txt  MLP_block.h  testbench.cpp
Hardware/A1_cmod/FieldComp/MLP_ssa/: CMakeLists.txt  MLP_ssa.h
Hardware/A1_cmod/FieldComp/MLP_vanilla/: CMakeLists.txt  MLP_vanilla.h  testbench.cpp
Hardware/A1_cmod/SRAMTest/: CMakeLists.txt  HybridDef.h  README.md  SRAMTest.h  data.json  gbr_cv.json  testbench.cpp
Hardware/A1_cmod/Sample/: CMakeLists.txt
Hardware/A1_cmod/Sample/CullingConversionUnit/: CMakeLists.txt  CullingConversionUnit.h  testbench.cpp
Hardware/A1_cmod/Sample/HAMAT/: CMakeLists.txt  HAMAT.h  testbench.cpp
Hardware/A1_cmod/Sample/RFM/: CMakeLists.txt  RFM.h  testbench.cpp
Hardware/A1_cmod/Sample/include/: GSARCHPackDef.h  IRISPackDef.h
Hardware/S0_scripts/: Makefile  builder.py  linker.json  report_all.sh  report_module.sh  run_fc.py  run_hls.py  run_pwr.py
Hardware/S0_scripts/hls/: catapult.global.tcl
Hardware/Tmps/: .gitignore
Hardware/examples/: README_BENCHMARKING.md  benchmark_config.json  benchmark_pipelines.py  measure_sim_speed.py  sample_dag.pkl  test_nerfstudio_integration.py  test_simple_benchmark.py
Instrumentation/: README.md  dag_to_operators_integration.py  my_model_execution_dag.gml  operator_mapping.py  plot_dot_subgraph.py  plot_transformed_operators.py  test_train_instrumentation.py
Operators/: README.md  plot_operator.py  plot_roofline.py
Operators/operators/: base_operator.py  blending_operator.py  computation_operator.py  encoding_operator.py  optimization_operator.py  sampling_operator.py
Operators/pipelines/: cicero_pipeline.py  gaurast_pipeline.py  gbu_pipeline.py  gsarch_pipeline.py  gscore_pipeline.py  icarus_pipeline.py  instant3d_pipeline.py  neurex_pipeline.py  srender_pipeline.py
Operators/utils/: README.md  TEST_ORGANIZATION.md  analysis_model.py  export_graph.py  export_pipeline.py  operator_graph.py  roofline_plot.py  system.py  test_all_pipelines.py  test_new_pipelines.py  test_quick.py  test_training_pipelines.py  test_verify_training.py  test_visualization.py  unit.py
Scheduler/: README.md  __init__.py  parse_dag.py  parse_dag_enhanced.py  parse_dag_semantic.py  training_scheduler.py
Scheduler/IR/: __init__.py  conversion.py
Scheduler/cpp/: CMakeLists.txt
Scheduler/cpp/include/RenderSim/: hw_config.hpp  ir.hpp  mapping_engine.hpp  mapping_loader.hpp  operator_scheduler.hpp  optimization_library.hpp  performance_timer.hpp  ppa_estimator.hpp  ramulator_interface.hpp  system_scheduler.hpp
Scheduler/cpp/src/: bindings.cpp  ir.cpp  operator_scheduler.cpp  optimization_library.cpp  ppa_estimator.cpp  ramulator_interface.cpp  system_scheduler.cpp  system_scheduler_training.cpp
Scheduler/cpp/src/mapping/: hw_config_loader.cpp  mapping_engine.cpp  mapping_loader.cpp
Scheduler/cpp/src/optimization/: training_optimizations.cpp
Scheduler/mapping/: __init__.py  hw_config.py
Scheduler/op_sched/: __init__.py  equation_based_optimizer.py  optimization_library.py  performance_model.py  training_optimization.py
Scheduler/tests/: README.md  __init__.py  minimal_test.py  run_all_tests.py  test_mapping.py  test_scheduler.py  test_training_pipelines.py  validate_simple.py
Visualization/: README.md  __init__.py  demo_visualization.py  gantt_plotter.py  graph_plotter.py  ppa_dashboard.py  schedule_visualizer.py
tests/: README_LATENCY_INSTRUMENTATION.md  README_MAPPING_TESTS.md  README_OPERATOR_SCHEDULER_TESTS.md  README_SYSTEM_SCHEDULER_TESTS.md  test_cpp_scheduler.py  test_end_to_end.py  test_imports.py  test_latency_instrumentation.py  test_mapping_engine.py  test_mapping_engine_simple.py  test_mapping_integration.py  test_mapping_with_real_config.py  test_operator_scheduler.py  test_ppa_ramulator.py  test_system_scheduler.py
tests/data/: mapped_ir_min.json  simple_hw_config.json
(+107 files in other folders)
