[build-system]
requires = ["scikit-build-core >=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "rendersim"
version = "0.1.0"
description = "RenderSim - Unified simulator for neural rendering accelerators"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy",
    "networkx",
    "pybind11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release" 