file(GLOB GRADIENTPRUNING_SOURCES "*.cpp")
file(GLOB GRADIENTPRUNING_HEADERS "*.h")

list(FILTER GRADIENTPRUNING_SOURCES EXCLUDE REGEX "tb_")

include_directories(../include_v6)

add_executable(sim_GradientPruning testbench.cpp ${GRADIENTPRUNING_SOURCES} ${GRADIENTPRUNING_HEADERS})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAGS} ${SIMFLAGS} ${LIBFLAGS}")


